// Vitest Snapshot v1

exports[`collect > cl_1 1`] = `
Collect {
  "collected": true,
  "goodID": "1",
  "userID": "",
}
`;

exports[`collect > cl_2 1`] = `
Collect {
  "collected": false,
  "goodID": "1",
  "userID": "",
}
`;

exports[`collect > cl_3 1`] = `
Collect {
  "collected": true,
  "goodID": "",
  "userID": "",
}
`;

exports[`collect > cl_4 1`] = `
Collect {
  "collected": false,
  "goodID": "",
  "userID": "",
}
`;

exports[`collect > cl_5 1`] = `
Collect {
  "collected": true,
  "goodID": "1",
  "userID": "0001",
}
`;

exports[`collect > cl_6 1`] = `
Collect {
  "collected": false,
  "goodID": "1",
  "userID": "0001",
}
`;

exports[`collect > cl_7 1`] = `
Collect {
  "collected": true,
  "goodID": "",
  "userID": "0001",
}
`;

exports[`collect > cl_8 1`] = `
Collect {
  "collected": false,
  "goodID": "",
  "userID": "0001",
}
`;

exports[`collect > cl_9 1`] = `
Collect {
  "collected": true,
  "goodID": "1",
  "userID": "1234567",
}
`;

exports[`collect > cl_10 1`] = `
Collect {
  "collected": false,
  "goodID": "1",
  "userID": "1234567",
}
`;

exports[`collect > cl_11 1`] = `
Collect {
  "collected": true,
  "goodID": "",
  "userID": "1234567",
}
`;

exports[`collect > cl_12 1`] = `
Collect {
  "collected": false,
  "goodID": "",
  "userID": "1234567",
}
`;
